force-app/main/default/objects/Doctor__c/fields/Birth_Day__c.field-meta.xml
<CustomField>
    <fullName>Birth_Day__c</fullName>
    <formula>TEXT(DAY(DateBorn__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Day</label>
    <type>Text</type>
</CustomField>