force-app/main/default/objects/Doctor__c/fields/Birthday_Month__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Month__c</fullName>
    <formula>TEXT(MONTH(DateBorn__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday Month</label>
    <type>Text</type>
</CustomField>