force-app/main/default/objects/Doctor__c/fields/DateBorn__c.field-meta.xml
<CustomField>
    <fullName>DateBorn__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>