force-app/main/default/objects/Doctor__c/fields/Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Licence_Number__c</fullName>
    <description>Licence must have form like:
NNNN / LLLL / NNNN
where: N - number, L - letter</description>
    <label>Licence Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>