force-app/main/default/objects/Doctor__c/fields/Next_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Next_Birthday__c</fullName>
    <label>Next Birthday</label>
    <type>Date</type>
</CustomField>