force-app/main/default/objects/Doctor__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <defaultValue>&quot;https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Hospital_sign.svg/2048px-Hospital_sign.svg.png&quot;</defaultValue>
    <label>Photo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>