force-app/main/default/objects/Doctor__c/fields/Receive_Birthday_Emails__c.field-meta.xml
<CustomField>
    <fullName>Receive_Birthday_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Receive Birthday Emails</label>
    <type>Checkbox</type>
</CustomField>