force-app/main/default/objects/Doctor__c/fields/Search_Counter__c.field-meta.xml
<CustomField>
    <fullName>Search_Counter__c</fullName>
    <label>Search Counter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Doctor_Search_Counter</valueSetName>
    </valueSet>
</CustomField>