force-app/main/default/objects/Doctor__c/fields/Speciality__c.field-meta.xml
<CustomField>
    <fullName>Speciality__c</fullName>
    <label>Speciality</label>
    <length>40</length>
    <type>Text</type>
</CustomField>