force-app/main/default/objects/Doctor__c/validationRules/Licence_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Licence_Number_Validation</fullName>
    <active>false</active>
    <description>Licence must have form like:
NNNN / LLLL / NNNN
where: N - number, L - letter</description>
    <errorConditionFormula>NOT(REGEX(  Licence_Number__c , &quot;[0-9]{4}/[A-Z]{4}/[0-9]{4}&quot;))</errorConditionFormula>
    <errorMessage>Licence must have form like:
NNNN / LLLL / NNNN
where: N - number, L - letter</errorMessage>
</ValidationRule>