force-app/main/default/objects/Doctor__c/validationRules/Validation_Doctor_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Doctor_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorMessage>You should write Doctor Last Name</errorMessage>
</ValidationRule>